...
                                                <rect key="frame" x="0.0" y="76" width="250" height="29"/>
                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="11"/>
                                                <state key="normal" title="Passwort anzeigen">
                                                    <color key="titleColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                </state>
...
                                                <directionalEdgeInsets key="directionalLayoutMargins" top="8" leading="8" bottom="8" trailing="8"/>
                                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
                                                <state key="normal" title="Anmelden"/>
                                                <userDefinedRuntimeAttributes>
                                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
...
                                                <directionalEdgeInsets key="directionalLayoutMargins" top="8" leading="8" bottom="8" trailing="8"/>
                                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
                                                <state key="normal" title="Registrieren"/>
                                                <userDefinedRuntimeAttributes>
                                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
...
                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <color key="tintColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <accessibility key="accessibilityConfiguration" identifier="LoginView">
                            <bool key="isElement" value="NO"/>
                        </accessibility>
...
                                        <rect key="frame" x="181" y="0.0" width="162" height="30"/>
                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                        <state key="normal" title="abmelden">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </state>
...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <accessibility key="accessibilityConfiguration" identifier="ScannerView">
                            <bool key="isElement" value="NO"/>
                        </accessibility>
...
                        </subviews>
                        <color key="backgroundColor" red="0.58081901069999997" green="0.088427625600000004" blue="0.31863921880000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <accessibility key="accessibilityConfiguration" identifier="MapView">
                            <bool key="isElement" value="NO"/>
                        </accessibility>
...
