...
                
            }else{
                userPasswordtextField.layer.add(shakeHelper.shake(centerOfControl: userPasswordtextField.center),
                                                                            forKey: "position")
            }
        } else {
            let alert = UIAlertController(title: "Benutzer unbekannt", message: "Der Benutzer "+userNameTextField.text!+" konnte nicht gefunden werden. Alternativ können Sie sich registrieren.", preferredStyle: .alert)
            
            alert.addAction(UIAlertAction(title: "Registrieren", style: .default, handler: { (nil) in
                self.signinBtn((Any).self)
            }))
            alert.addAction(UIAlertAction(title: "zurück", style: .default, handler: nil))
            self.present(alert, animated: true)
...
